--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,7 @@ build_script:
     dotnet test -c Release .\test\csMACnz.FluentJsonBuilder.Tests\csMACnz.FluentJsonBuilder.Tests.csproj
 
     dotnet pack -c Release -o ${pwd} .\src\csMACnz.FluentJsonBuilder\csMACnz.FluentJsonBuilder.csproj /property:VersionPrefix=$env:APPVEYOR_BUILD_VERSION
+test: off
 artifacts:
 - path: csMACnz.FluentJsonBuilder.*.nupkg
-  name: nuget   
+  name: nuget
