Added SetValue syntax

--- a/src/csMACnz.FluentJsonBuilder/csMACnz.FluentJsonBuilder.csproj
+++ b/src/csMACnz.FluentJsonBuilder/csMACnz.FluentJsonBuilder.csproj
@@ -17,4 +17,8 @@
     <PackageTags>json;fluent;json string</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+  </ItemGroup>
+
 </Project>
