--- a/src/csMACnz.FluentJsonBuilder/csMACnz.FluentJsonBuilder.csproj
+++ b/src/csMACnz.FluentJsonBuilder/csMACnz.FluentJsonBuilder.csproj
@@ -3,12 +3,11 @@
   <PropertyGroup>
     <Product>FluentJsonBuilder</Product>
     <Copyright>Copyright © csMACnz 2017</Copyright>
-    <Description></Description>
+    <Description>A json string builder, built on `Newtonsoft.Json`'s JToken, using a Fluent DSL syntax, in C#.</Description>
     <AssemblyTitle>FluentJsonBuilder</AssemblyTitle>
     <NeutralLanguage>en-NZ</NeutralLanguage>
     <VersionPrefix>0.0.1</VersionPrefix>
     <Authors>dev-markc</Authors>
-    <VersionPrefix>0.0.1</VersionPrefix>
     <TargetFramework>netstandard1.4</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DebugType>full</DebugType>
